--- a/zookeeper/zookeeper-demo/zookeeper-basic-demo/pom.xml
+++ b/zookeeper/zookeeper-demo/zookeeper-basic-demo/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springboot-rabbitmq-demo</artifactId>
-        <groupId>com.fxc</groupId>
+        <artifactId>zookeeper-demo</artifactId>
+        <groupId>com.fxc.zookeeper</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.fxc.zookeeper</groupId>
-    <artifactId>zookeeper-learning</artifactId>
+    <artifactId>zookeeper-basic-demo</artifactId>
 
     <dependencies>
 
@@ -45,6 +44,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
